<resources>
    <string name="app_name">FFT</string>
    <string name="login">Login to FFT</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to register</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Closed</string>
    <string name="drawer_item_home">home</string>
    <string name="placeholder">loading</string>
    <string name="plan">Plan</string>
    <string name="notes"><u>Notes</u></string>
    <string name="coaching">Coaching</string>
    <string name="bench">Bench</string>
    <string name="squat">Squat</string>
    <string name="deadlift">Deadlift</string>
    <string name="start_workout">Start Workout</string>
    <string name="ml_coaching_descr">Choose from the options below to get ML assisted help on your form!</string>
    <string name="current_workout">Current Workout -</string>
    <string name="placeholder_time">0:00:00</string>
    <string name="workout_number">workout number #</string>
    <string name="finish_workout">Finish Workout</string>
</resources>