<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    android:gravity="start" >
    <TextView
        android:id="@+id/greeter"
        android:text="@string/placeholder"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:id="@+id/card_plan"
        style="?attr/materialCardViewFilledStyle"
        cardBackgroundColor="red"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="start"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/Plan"
                android:text="@string/plan"
                android:textAppearance="?attr/textAppearanceTitleLarge"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/CurrentWorkout"
                android:text="@string/placeholder"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <TextView
            android:id="@+id/numWorkout"
            android:text="@string/placeholder"
            android:layout_margin="10dp"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:id="@+id/card_coach"
        android:layout_marginTop="10dp"
        style="?attr/materialCardViewFilledStyle"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="start"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/Coaching"
                android:text="@string/coaching"
                android:textAppearance="?attr/textAppearanceTitleLarge"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <Button
                    android:id="@+id/benchBtn"
                    android:layout_width="0dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="@string/bench"
                    android:layout_height="wrap_content"/>
                <Button
                    android:id="@+id/squatBtn"
                    android:layout_width="0dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="@string/squat"
                    android:layout_height="wrap_content"/>
                <Button
                    android:layout_width="0dp"
                    android:id="@+id/deadliftBtn"
                    android:layout_margin="5dp"
                    android:text="@string/deadlift"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>